src/objects/AIA_Workplan_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>AIA_Workplan_Type_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AIA Workplan Type Task</label>
        <referenceTo>AIA_Workplan_Type_Task__c</referenceTo>
        <relationshipName>AIA_Workplan_Assignment1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>BLANKVALUE(Proposal_Request_Form__r.Opportunity__r.Account.Name,  Opportunity__r.Account.Name )</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipName>AIA_Workplan_Assignment1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Workplan Assignment</relationshipLabel>
        <relationshipName>Workplan_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Assigned Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <formula>IF(ISBLANK(External_Assignee__c),IF ( ISBLANK(Owner:Queue.QueueName), 
Owner:User.FirstName + &quot; &quot; + Owner:User.LastName, Owner:Queue.QueueName),External_Assignee__r.FirstName+&apos; &apos;+External_Assignee__r.LastName)</formula>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Error__c</fullName>
        <label>Assignment Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Benefit_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Request Form</label>
        <referenceTo>Benfit_Request_Form__c</referenceTo>
        <relationshipLabel>Workplan Assignment</relationshipLabel>
        <relationshipName>Workplan_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Accepted__c</fullName>
        <label>Date Accepted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dependent_Workplan_Type_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent Workplan Type Task</label>
        <referenceTo>AIA_Workplan_Type_Task__c</referenceTo>
        <relationshipName>AIA_Workplan_Assignment2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Action_Comments__c</fullName>
        <label>External Action - Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Action_Completed_By__c</fullName>
        <label>External Action - Completed By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Action_Completed_On__c</fullName>
        <label>External Action - Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Action_Target_Completion__c</fullName>
        <label>External Action - Target Completion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Action_Target_Start__c</fullName>
        <label>External Action - Target Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Assignee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Workplan Assignment</relationshipLabel>
        <relationshipName>AIA_Workplan_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workplan_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>AIA_Workplan_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRF_Owner_Email__c</fullName>
        <label>PRF Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PRF_Owner_Name__c</fullName>
        <formula>Proposal_Request_Form__r.Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRF Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Sales_Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Sales Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipName>AIA_Workplan_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal Request Form</label>
        <referenceTo>PRF__c</referenceTo>
        <relationshipName>AIA_Workplan_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_Summary__c</fullName>
        <formula>Proposal_Request_Form__r.RFP_Summary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFP Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_Date_Time__c</fullName>
        <label>Reminder Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Stage1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate this record is System  Generated</description>
        <label>System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Code__c</fullName>
        <label>Assignment Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <label>Assignment Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <label>Assignment Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_For__c</fullName>
        <formula>TEXT(Workplan_Stage__r.Workplan_Type__r.Used_For__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Used For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workplan_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workplan Stage</label>
        <referenceTo>Workplan_Stage__c</referenceTo>
        <relationshipLabel>Workplan Assignment</relationshipLabel>
        <relationshipName>AIA_Workplan_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workplan_Type_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workplan Type Task</label>
        <referenceTo>AIA_Workplan_Type_Task__c</referenceTo>
        <relationshipName>AIA_Workplan_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Workplan Assignment</label>
    <listViews>
        <fullName>AIA_Account_Issue_AIA_Workplan_Assignment</fullName>
        <filterScope>Queue</filterScope>
        <label>AIA Account Issue</label>
        <queue>AIA_Account_Issue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AIA_Default_Queue_AIA_Workplan_Assignment</fullName>
        <filterScope>Queue</filterScope>
        <label>AIA Default Queue</label>
        <queue>AIA_Default_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AIA_Implementation_Queue_AIA_Workplan_Assignment</fullName>
        <filterScope>Queue</filterScope>
        <label>AIA Implementation Queue</label>
        <queue>AIA_Implementation_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AIA_Quality_Audit_AIA_Workplan_Assignment</fullName>
        <filterScope>Queue</filterScope>
        <label>AIA Quality Audit</label>
        <queue>AIA_Quality_Audit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AIA_SWAT_AIA_Workplan_Assignment</fullName>
        <filterScope>Queue</filterScope>
        <label>AIA SWAT</label>
        <queue>AIA_SWAT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Benefits_Core_Team_AIA_Workplan_Assignment</fullName>
        <filterScope>Queue</filterScope>
        <label>Benefits Core Team</label>
        <queue>Benefits_Core_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Broker_Compliance_AIA_Workplan_Assignment</fullName>
        <filterScope>Queue</filterScope>
        <label>Broker Compliance</label>
        <queue>Broker_Compliance</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Broker_Escalation_AIA_Workplan_Assignment</fullName>
        <filterScope>Queue</filterScope>
        <label>Broker Escalation</label>
        <queue>Broker_Escalation</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Broker_Sales_Support_AIA_Workplan_Assignment</fullName>
        <filterScope>Queue</filterScope>
        <label>Broker Sales Support</label>
        <queue>Broker_Sales_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LGIT_Queue_AIA_Workplan_Assignment</fullName>
        <filterScope>Queue</filterScope>
        <label>LGIT Queue</label>
        <queue>LGIT_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_PRF_Assignment</fullName>
        <columns>NAME</columns>
        <columns>Proposal_Request_Form__c</columns>
        <columns>Stage__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Date_Accepted__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Proposal_Request_Form__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My PRF Assignment</label>
    </listViews>
    <listViews>
        <fullName>My_Workplan_Assignments</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Assigned_Date_Time__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <columns>Date_Accepted__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Workplan Assignments</label>
    </listViews>
    <listViews>
        <fullName>SFDC_Support_Team_AIA_Workplan_Assignment</fullName>
        <filterScope>Queue</filterScope>
        <label>SFDC Support Team</label>
        <queue>SFDC_Support_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>WT-{000000}</displayFormat>
        <label>Workplan Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workplan Assignment</pluralLabel>
    <recordTypes>
        <fullName>PRF_Assignment</fullName>
        <active>true</active>
        <label>PRF Assignment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workplan_Assignment</fullName>
        <active>true</active>
        <label>Workplan Assignment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EWPA001</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED( Due_Date__c ),
OR(  
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
 CreatedById   &lt;&gt;  $User.Id 
)
)</errorConditionFormula>
        <errorMessage>EWPA001: Only Administrators or the creator of an Assignment can change the Due Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWPA001_2</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED(Due_Date__c)  &amp;&amp; ($User.Id &lt;&gt; CreatedBy.Id)</errorConditionFormula>
        <errorMessage>EWPA001: Only Administrators or the creator of an Assignment can change the Due Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWPA002</fullName>
        <active>true</active>
        <errorConditionFormula>AND(External_Assignee__c != &apos;&apos; , Internal_Assignee__c != null)</errorConditionFormula>
        <errorMessage>EWPA002: Please select only one external or Internal Assignee.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWPA003</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE( Status__c ),&quot;Completed&quot;)&amp;&amp; ISCHANGED( Status__c )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>EWPA003: User cannot change the status once it is &quot;Completed&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWPA004</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE( Status__c ),&quot;Not Required&quot;)&amp;&amp; ISCHANGED( Status__c )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>EWPA004: User cannot change the status once it is &quot;Not Required&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWPA005</fullName>
        <active>true</active>
        <description>The assignment can not be set to not required if the assignment is required</description>
        <errorConditionFormula>Workplan_Type_Task__r.Required__c &amp;&amp;  TEXT(Status__c) = &apos;Not Required&apos;</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>EWPA005: If assignment is required the status can not be set to &quot;Not Required&quot;</errorMessage>
    </validationRules>
</CustomObject>